# whitelist_vault

./: Anchor.toml  README.md  package.json
programs/whitelist_vault/: Cargo.toml
programs/whitelist_vault/src/: constants.rs  error.rs  lib.rs  state.rs
programs/whitelist_vault/src/instructions/: admin.rs  create_mint.rs  initialize.rs  mod.rs  operations.rs  transfer_hook.rs  whitelist.rs
programs/whitelist_vault/tests/: test_initialize.rs
