[package]
name = "whitelist_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whitelist_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2", features = ["token", "token_2022"] }
spl-transfer-hook-interface = "2.1.0"
spl-tlv-account-resolution = "0.11.1"
spl-discriminator = "0.5.2"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-sdk = "2.2"
solana-program = "2.2"
spl-token-2022 = { version = "7.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0", features = ["no-entrypoint"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
